# aformat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: __internal.rs  lib.rs
tests/: basic.rs
tests/utils/: mod.rs
