[package]
name = "aformat"
version = "0.1.2"
edition = "2021"
license = "MIT"
rust-version = "1.79"
categories = ["value-formatting", "no-std", "no-std::no-alloc"]
keywords = ["formatting", "array", "no_std"]
repository = "https://github.com/GnomedDev/aformat"
description = "A no-std and no-alloc version of format! using ToArrayString"

[dependencies]
typenum = { version = "1.17.0", features = ["const-generics"] }
aformat-macros = { version = "0.1.1", path = "macros" }
to-arraystring = { version = "0.2.0" }
typenum_mappings = "0.1.0"
arrayvec = "0.7.4"
