[package]
name = "aformat-macros"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Internal proc-macro crate for aformat"
repository = "https://github.com/GnomedDev/aformat"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
bytestring = "1.3.1"
proc-macro2 = "1.0.82"
procout = { version = "0.1.13", features = ["procout"] }

[dependencies.syn]
version = "2.0.61"
default-features = false
features = ["printing", "parsing", "proc-macro", "full"]
